--- a/BakerySales.Tests/BakerySales.Tests.csproj
+++ b/BakerySales.Tests/BakerySales.Tests.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ToDoList\ToDoList.csproj" />  
+    <ProjectReference Include="..\BakerySales\BakerySales.csproj" />  
   </ItemGroup>
 
 </Project>
